// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render properly with a common use case 1 1`] = `
<section
  className="Section mist"
  style={Object {}}
>
  <h2
    className="Heading slate headingLines"
    id=""
  >
    Test 3
  </h2>
  <div
    className="content"
  >
    Test Children 4
  </div>
</section>
`;

exports[`Section should render properly with a common use case 2 1`] = `
<section
  className="Section slate"
  style={Object {}}
>
  <h2
    className="Heading white"
    id=""
  >
    Test 4
  </h2>
  <div
    className="content"
  >
    Test Children 5
  </div>
</section>
`;

exports[`Section should render properly with all props assigned 1`] = `
<section
  className="testing-123 Section grayLight"
  style={
    Object {
      "color": "navy",
    }
  }
>
  <h2
    className="Heading slate"
    id="test-1"
  >
    Test
  </h2>
  <div
    className="content"
  >
    Test Children 2
  </div>
</section>
`;

exports[`Section should render properly with the most common use case 1`] = `
<section
  className="Section white"
  style={Object {}}
>
  <h2
    className="Heading slate headingLines"
    id=""
  >
    Test 2
  </h2>
  <div
    className="content"
  >
    Test Children 3
  </div>
</section>
`;

exports[`Section should render with just required props passed 1`] = `
<section
  className="Section gray"
  style={Object {}}
>
  
  <div
    className="content"
  >
    Test Children
  </div>
</section>
`;
